# bfic

./: CMakeLists.txt  README.md  build.sh
examples/: hello.bf
src/: main.c  types.h  windows.h
